# csv2vex

./: .gitignore  pyproject.toml
csv2vex/: __init__.py  utils.py
