[tool.poetry]
name = "csv2vex"
version = "1.0.0"
description = "CLI to convert csv to cyclonedx VEX documents"
authors = ["Richard Estwick <restwick@cybeats.com>", "Cybeats Technologies <cs@cybeats.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.14.3"
pandas = "^3.0.2"
cyclonedx-python-lib = "^11.7.0"
openpyxl = "^3.1.5"
numpy = "^2.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
csv2vex = "csv2vex.__main__:main"

[dependency-groups]
dev = [
    "debugpy (>=1.8.17,<2.0.0)"
]
